--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,27 +2,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
     package="com.randarlabs.android" 
-    android:versionName="1.0.0.15">
+    android:versionName="2.0.0" android:versionCode="6">
     <application 
         android:icon="@drawable/icon" 
         android:label="@string/app_name" 
-		android:persistent="false">
-        <activity android:name=".splashscreen.SplashScreenActivity">
+		android:persistent="false"
+		android:theme="@android:style/Theme.NoTitleBar">
+        <activity 
+            android:name=".splashscreen.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="net.randarnet.Constructor"
-                  android:label="@string/app_name">
+        <activity 
+            android:name="com.randarlabs.Constructor"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name="com.google.ads.AdActivity" 
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
-        
+        <activity 
+            android:name="com.google.ads.AdActivity" 
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>        
     </application>
     
     <uses-permission android:name="android.permission.INTERNET"/>
